--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <title>vue-douban-dome</title>
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/static/css/reset.css">
+    <title>豆瓣电影</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   </head>
   <body>
     <div id="app"></div>
